--- a/backend/template/timesheet.html
+++ b/backend/template/timesheet.html
@@ -45,8 +45,8 @@
     </style>
   </head>
   <body>
-    <div class="company-name">
-      Newput Infotech Pvt. Ltd. Indore
+    <div class="company-name" style="text-align:center">
+      <img src="http://www.newput.com/wp/wp-content/uploads/2016/01/newput-logo.png" alt="Newput Logo" class="retina">
     </div>
     <div class="title">
       Timesheet Of Employee
