Update template for email field.

--- a/backend/template/timesheet.html
+++ b/backend/template/timesheet.html
@@ -57,6 +57,10 @@
         <td colspan="4">{{empName}}</td>
       </tr>
       <tr>
+        <th colspan="3">Email</th>
+        <td colspan="4">{{empEmail}}</td>
+      </tr>
+      <tr>
         <th colspan="3">Month</th>
         <td colspan="4">{{month}}</td>
       </tr>
