Fix timesheet entry issue for email.

--- a/backend/template/timesheet.html
+++ b/backend/template/timesheet.html
@@ -92,7 +92,7 @@
           <td>{{homeIn}}</td>
           <td>{{homeOut}}</td>
           <td>{{dayTotal}}</td>
-          <td>{{status}}</td>
+          <td>{{{status}}}</td>
         </tr>
       {{/each}}
       <tr>
