--- a/backend/template/timesheet.html
+++ b/backend/template/timesheet.html
@@ -48,9 +48,7 @@
     <div class="company-name" style="text-align:center">
       <img src="http://www.newput.com/wp/wp-content/uploads/2016/01/newput-logo.png" alt="Newput Logo" class="retina">
     </div>
-    <div class="title">
-      Timesheet Of Employee
-    </div>
+    <div class="title">{{message}}</div>
     <table>
       <tr>
         <th colspan="3">Name</th>
