Final changes to salary-slip code

--- a/backend/template/salaryslip.html
+++ b/backend/template/salaryslip.html
@@ -86,11 +86,11 @@
             }
 
             #watermark {
-                bottom: 230px;
+                bottom: 240px;
                 color: gray;
                 font-size: 60px;
                 left: 25%;
-                opacity: 0.1;
+                opacity: 0.2;
                 position: absolute;
                 -webkit-transform: rotate(-50deg);
                 z-index: 99;
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="days-month">
-                        No of Days {{currentMonthDays}}
+                        No of days {{currentMonthDays}}
                     </div>
                 </div>
                 <div class="salary-content">
